--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "nodemon": "^2.0.16"
   },
   "devDependencies": {
     "chai": "^4.2.0",
