--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "nodemon": "^2.0.16",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
